# XSTracking

./: .clang-format  .gitignore  CMakeLists.txt  README.md  pak.sh
config/: runConfig.yaml  trackerConfig.yaml
src/: camera.cpp  camera.h  common.cpp  common.h  main.cpp
src/cf_libs/common/: cf_tracker.hpp  feature_channels.hpp  mat_consts.hpp  math_helper.cpp  math_helper.hpp  scale_estimator.hpp  tracker_debug.hpp
src/cf_libs/dsst/: dsst_debug.hpp  dsst_tracker.hpp
src/tracker_run/: tracker_run.cpp  tracker_run.hpp
